# eq-questionnaire-schemas

./: .gitignore  .pylintrc  Makefile  Pipfile  README.md  docker-compose-schema-validator.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  pull_request.yml  release.yml
schemas/business/: cg_0001.json
schemas/business/en/: 073_0001.json  074_0001.json  1_0005.json  1_0102.json  1_0112.json  1_0203.json  1_0205.json  1_0213.json  1_0215.json  2_0001.json  abres_0015.json  abres_0017.json  abres_0019.json  abs_1801.json  abs_1802.json  abs_1803.json  abs_1804.json  abs_1805.json  abs_1806.json  abs_1807.json  abs_1808.json  abs_1809.json  abs_1810.json  abs_1811.json  abs_1812.json  abs_1813.json  abs_1814.json  abs_1815.json  abs_1817.json  abs_1818.json  (+128 more)
scripts/: build_schemas.sh  eq_translations_check.py  extract_translation_templates.py  resolve_suggestions_urls.py  run_lint_python.sh  run_validator.sh  translate_schemas.py  validate_schemas.py  validate_schemas.sh
translations/: ccs_household_gb_eng.pot  ccs_household_gb_wls.pot  census_communal_establishment_gb_wls.pot  census_household_gb_nir.pot  census_household_gb_wls.pot  census_individual_gb_nir.pot  census_individual_gb_wls.pot  cris_0001.pot  phm_0001.pot
translations/cy/: ccs_household_gb_wls_cy.po  census_communal_establishment_gb_wls_cy.po  census_household_gb_wls_cy.po
translations/eo/: census_household_gb_nir_eo.po  census_individual_gb_nir_eo.po
translations/ga/: census_household_gb_nir_ga.po  census_individual_gb_nir_ga.po
(+306 files in other folders)
