[tool.poetry]
name = "eq-questionnaire-schemas"
version = "0.1.0"
description = "Questionnaire Schemas Repository"
authors = ["ONSDigital"]


[tool.poetry.dependencies]
python = "^3.10"
coloredlogs = "*"
black = "*"
isort = "*"
eq-translations = {git = "https://github.com/ONSDigital/eq-translations.git", rev = "v4.7.0"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"